# hypothesis-factory

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  build_web.py  diagnose.py  docker-compose.yml  generate.py  knowledge_base.py  pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  TZ_modularization.md  api.adoc  architecture.adoc  deployment.adoc  development.adoc  index.adoc  user-guide.adoc
docs/openapi/: gateway.openapi.json  hypothesis.openapi.json  ingestion.openapi.json  knowledge.openapi.json  model-runtime.openapi.json
frontend/: Dockerfile  app.js  index.html  nginx.conf  package-lock.json  package.json  styles.css
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
libs/contracts/: pyproject.toml
libs/contracts/src/hf_contracts/: __init__.py  models.py
openapi/: gateway.json  generation.json  ingestion.json  knowledge.json  llm.json
output/: evaluation.json
output/web/: hypotheses_КГМК.csv  hypotheses_КГМК.json  hypotheses_НОФ_Вкр.csv  hypotheses_НОФ_Вкр.json  hypotheses_НОФ_мед.csv  hypotheses_НОФ_мед.json  hypotheses_ТОФ.csv  hypotheses_ТОФ.json  index.html  report_КГМК.md  report_НОФ_Вкр.md  report_НОФ_мед.md  report_ТОФ.md  КГМК.html  НОФ_Вкр.html  НОФ_мед.html  ТОФ.html
scripts/: export_openapi.py  run_local.sh
services/: __init__.py
tests/: conftest.py  test_features.py  test_gateway.py  test_generation.py  test_ingestion.py  test_knowledge.py  test_llm.py  test_services.py
(+42 files in other folders)
