[project]
name = "hypothesis-factory-platform"
version = "2.0.0"
description = "Microservice platform for evidence-backed R&D hypothesis generation"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "python-multipart>=0.0.9,<1",
  "openpyxl>=3.1,<4",
  "python-docx>=1.1,<2",
  "networkx>=3.2,<4",
  "pypdf>=4,<7",
  "anthropic>=0.40,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.24,<1", "ruff>=0.8,<1", "pyyaml>=6,<7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "packages/contracts/src", "packages/llm/src", "packages/kg/src", "packages/domains/src"]

[tool.ruff]
line-length = 100
target-version = "py310"

